Continue migration to Java 8 and Vert.x